--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,10 @@
 .main-content {
   flex: 1;
   min-height: 95vh;
-  padding-top: 100px;
+  padding: 100px 0 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
@@ -130,6 +133,7 @@ ul {
   display: flex;
   transition: all 0.3s ease;
   box-shadow: 0 4px 6px rgba(52, 152, 219, 0.2);
+  width: max-content;
 }
 
 .button:hover {
