--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,8 +75,7 @@ td {
   padding: 20px;
   border-radius: 8px;
   position: relative;
-  min-width: 50%;
-  max-width: 90%;
+  width: 50%;
   min-height: 60vh;
   max-height: 90vh;       /* 👈 Restrict height */
   overflow-y: auto;        /* 👈 Enable vertical scrolling */
@@ -110,4 +109,47 @@ td {
   background-color: #3498db;
   filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.575));
   border-color:  #3498db;
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.popup-box {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  min-width: 30%;
+  max-width: 70%;
+  text-align: center;
+}
+
+.popup-close {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  font-size: 24px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.popup-img {
+  height: 50vh;
+  margin-bottom: 10px;
+}
+
+.popup-text {
+  font-size: 16px;
+  color: #333;
 }
